--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ menu:
   About: /about/
   Links: /links/
 
-disqus_shortname: sengink
-google_analytic: UA-61048937-4
+disqus_shortname:
+google_analytic:
